--- a/src/components/Nav/navBar.module.css
+++ b/src/components/Nav/navBar.module.css
@@ -1,5 +1,5 @@
 /* Variables para mantener consistencia */
-:root {
+.header {
   --primary-color: #8D4E31;
   --primary-light: #A06A50;
   --secondary-color: #F3A950;
@@ -16,7 +16,7 @@
 
 /* Header principal */
 .header {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
@@ -77,6 +77,7 @@
   font-weight: 400;
   letter-spacing: 2px;
   text-transform: lowercase;
+  color: var(--text-dark);
 }
 
 /* Botones */
