--- a/src/components/Nav/navBar.module.css
+++ b/src/components/Nav/navBar.module.css
@@ -133,6 +133,7 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 150;
+  -webkit-backdrop-filter: blur(2px);
   backdrop-filter: blur(2px);
 }
 
@@ -143,7 +144,7 @@
   left: 0;
   bottom: 0;
   width: 280px;
-  background-color: var(--background-light);
+  background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);
   z-index: 200;
   box-shadow: var(--shadow-lg);
   display: flex;
@@ -178,7 +179,7 @@
 .closeButton {
   background: transparent;
   border: none;
-  color: var(--text-dark);
+  color: var(--primary-color);
   font-size: 1.2rem;
   cursor: pointer;
   padding: 0.5rem;
@@ -189,7 +190,7 @@
 }
 
 .darkMode .closeButton {
-  color: var(--text-light);
+  color: var(--primary-color);
 }
 
 /* Lista de navegación */
@@ -199,6 +200,7 @@
   margin: 0;
   flex-grow: 1;
   overflow-y: auto;
+  color: var(--primary-color);
 }
 
 .navItem {
